fixed path error

--- a/static.html
+++ b/static.html
@@ -27,5 +27,5 @@
 </script>
 
 <script type="text/html" data-help-name="static">
-  <p>A simple node serves static files from a directory.</p>
+  <p>A simple node serves static files from a directory. Use a wildcard (*) in the proceeding "http in" node</p>
 </script>
